# zstd-script

./: .gitignore  README.MD  README.md  README_CN.md  README_EN.md  requirements.txt  zstd.py
.github/workflows/: release.yml
zarc-desktop/: index.html  package-lock.json  package.json  vite.config.ts
zarc-desktop/src/: App.tsx  index.css  main.ts  style.css
zarc-desktop/src-tauri/: Cargo.toml  tauri.conf.json
zarc-desktop/src-tauri/icons/: icon.icns
zarc-desktop/src-tauri/src/: crypto.rs  lib.rs  main.rs
